--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@vitejs/plugin-vue-jsx": "^1.3.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "@zougt/some-loader-utils": "^1.4.0-beta.5",
+    "@zougt/vite-plugin-theme-preprocessor": "^1.4.0",
+    "color": "^4.1.0",
     "eslint": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.1.1",
