--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "unplugin-element-plus": "^0.1.3",
     "unplugin-vue-components": "^0.17.2",
     "vite": "^2.6.4",
-    "vite-plugin-commonjs-externals": "^0.1.1",
     "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-externals": "^0.3.0",
     "vite-plugin-svg-icons": "^1.0.5",
     "vite-plugin-vue-setup-extend": "^0.1.0",
     "vue-tsc": "^0.3.0"
