--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "prettier": "^2.4.1",
+    "rollup-plugin-visualizer": "^5.5.2",
     "typescript": "^4.4.3",
     "unplugin-element-plus": "^0.1.3",
     "unplugin-vue-components": "^0.17.2",
     "vite": "^2.6.4",
+    "vite-plugin-cdn-import": "^0.3.5",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-externals": "^0.3.0",
     "vite-plugin-svg-icons": "^1.0.5",
